
(rule
    (deps (source_tree platform))
    (targets libxf_foundation_stubs.a dllxf_foundation_stubs.so)
    (action
        (progn
            (chdir platform/osx
                (run make lib/libxf_platform_stubs.a)
                (run make lib/dllxf_platform_stubs.so))
            (copy platform/osx/lib/libxf_platform_stubs.a libxf_platform_stubs.a)
            (copy platform/osx/lib/dllxf_platform_stubs.so dllxf_platform_stubs.so)
            (copy platform/osx/lib/libEGL.dylib libEGL.dylib)
            (copy platform/osx/lib/libGLESv2.dylib libGLESv2.dylib))))

(library
    (name xf_platform_osx)
    (self_build_stubs_archive xf_platform))
